[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mohammad <mohammadrabetian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.3"
fastapi = "^0.65.2"
aiohttp = "^3.7.3"
pydantic = "^1.4"
gunicorn = "^20.0.4"
requests = "^2.25.0"
aioredis = "^1.3.1"
redis = "^3.5.3"
pytest = "^5.4.1"
pytest-asyncio = "^0.15.1"
ujson = "^4.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
